--- a/views/admin/index.pug
+++ b/views/admin/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title admin
+    link(rel='stylesheet' href='css/admin.css')
   body
-    h1 admin
     #root
     script(src='js/adBundle.js')
